src/styles/global.css
@import "./fonts.css";
@import "./utils.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --shadow-hard: 4px 4px 0 0 rgb(0 0 0 / 89%);
}

html,
body {
  height: 100%;
}

html {
  font-size: calc(1.125 * 100%);
}

body {
  font-family: "PlusJakartaSans", sans-serif;
  line-height: 1.6;
  color: #333;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1,
h2,
h3,
h4 {
  @apply font-semibold;
  margin-top: 2em;
  margin-bottom: 1em;
}

h1 {
  @apply text-4xl font-extrabold;
}

h2 {
  @apply text-2xl;
}

h3 {
  @apply text-xl;
}

a {
  transition: color 0.2s ease;
}

a:hover {
  @apply text-orange-600;
}

code:not([class*="language-"]) {
  @apply font-mono text-xs rounded-sm inline-block bg-gray-100 text-red-600 border border-gray-300;
  padding: 0.1em 0.5em;
  margin: 0 0.2em;
  box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2), 0 0 0 2px #fff inset;
}

pre:not([class*="language-"]) {
  @apply rounded-md overflow-hidden;
  box-shadow: var(--shadow-hard);
}

blockquote {
  @apply block pl-4 my-6 text-gray-500 text-lg border-l-2 border-l-black;
}

kbd {
  font-size: 0.75rem;
  display: inline-block;
  border: 1px solid black;
  border-radius: 4px;
  padding: 0.1em 0.5em;
  margin: 0 0.5em 0 0.2em;
  box-shadow: var(--shadow-hard);
  background-color: #f7f7f7;
}

p,
ul {
  @apply my-6;
}

ul {
  @apply my-6 list-disc pl-4;
}

